# docs/swagger.json
@@ -758,6 +758,54 @@
                 }
             }
         },
+        "/upload/file": {
+            "post": {
+                "description": "文件上传接口",
+                "produces": [
+                    "application/json"
+                ],
+                "tags": [
+                    "文件"
+                ],
+                "summary": "upload/file 文件上传接口",
+                "parameters": [
+                    {
+                        "type": "string",
+                        "description": "Bearer ",
+                        "name": "Authorization",
+                        "in": "header",
+                        "required": true
+                    },
+                    {
+                        "type": "file",
+                        "description": "文件",
+                        "name": "file",
+                        "in": "formData",
+                        "required": true
+                    }
+                ],
+                "responses": {
+                    "200": {
+                        "description": "ok",
+                        "schema": {
+                            "allOf": [
+                                {
+                                    "$ref": "#/definitions/response.JsonResponse"
+                                },
+                                {
+                                    "type": "object",
+                                    "properties": {
+                                        "data": {
+                                            "$ref": "#/definitions/cloud.Response"
+                                        }
+                                    }
+                                }
+                            ]
+                        }
+                    }
+                }
+            }
+        },
         "/user/:id": {
             "get": {
                 "description": "获取用户信息",
@@ -834,6 +882,14 @@
                 },
                 "uid": {
                     "description": "uid",
+                    "type": "string"
+                }
+            }
+        },
+        "cloud.Response": {
+            "type": "object",
+            "properties": {
+                "file_url": {
                     "type": "string"
                 }
             }
